--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,10 +61,10 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.43f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\enemy_move.cs" />
     <Compile Include="Assets\playerMove.cs" />
     <Compile Include="Assets\ItemBase.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
+    <Compile Include="Assets\enemy\enemy_move.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
