--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,8 @@
     <Analyzer Include="C:\school\gatya\6000.0.43f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\enemy\debag_cam.cs" />
+    <Compile Include="Assets\enemy\spline_system.cs" />
     <Compile Include="Assets\playerMove.cs" />
     <Compile Include="Assets\ItemBase.cs" />
     <Compile Include="Assets\TutorialInfo\Scripts\Readme.cs" />
