--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,8 +66,8 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\Item\ItemBase.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
+    <Compile Include="Assets\sound_Event.cs" />
     <Compile Include="Assets\Title\Title.cs" />
-    <Compile Include="Assets\sound_pool.cs" />
     <Compile Include="Assets\enemy\se.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
