--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{3A5C25BA-CC81-A389-C471-BBDD1B7DEE4D}</ProjectGuid>
+    <ProjectGuid>{9E8BF68B-1847-CA5C-BB84-1D11724D6AEF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -67,8 +67,8 @@
     <Compile Include="Assets\Item\ItemBase.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
     <Compile Include="Assets\Player\Day1_end_Day2_end.cs" />
+    <Compile Include="Assets\sound_Event.cs" />
     <Compile Include="Assets\Title\Title.cs" />
-    <Compile Include="Assets\sound_pool.cs" />
     <Compile Include="Assets\enemy\se.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMPro_InstructionOverlay.cs" />
