ゲームクリアを今度こそ直したよ

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\enemy\script\debag_cam.cs" />
     <Compile Include="Assets\enemy\script\kari_player.cs" />
+    <Compile Include="Assets\Player\StartCollision.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextMeshProFloatingText.cs" />
     <Compile Include="Assets\enemy\script\enemy_move.cs" />
   </ItemGroup>
